Remove articles from Dutch words in dataset and remove regex from component

--- a/src/data/easy.json
+++ b/src/data/easy.json
@@ -1,11 +1,11 @@
 [
   {
-    "dutch": "het boek",
+    "dutch": "boek",
     "english": "book",
     "article": "het"
   },
   {
-    "dutch": "de tafel",
+    "dutch": "tafel",
     "english": "table",
     "article": "de"
   }
