--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "convert-wordlist": "node scripts/convert-wordlist.js"
   },
   "dependencies": {
     "react": "^18.2.0",
